--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         java: [11]
-        target-arch: [x86_64, aarch64, riscv64]
+        arch: [x86_64, aarch64, riscv64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -16,12 +16,12 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'liberica'
       - run: sudo apt-get install makeself
-      - run: ant -Dtarget.arch=${ matrix.target-arch } makeself
+      - run: ant -Dtarget.arch=${ matrix.arch } makeself
       - uses: actions/upload-artifact@v4
         with:
-          name: qz-tray-linux-${ matrix.target-arch }
+          name: qz-tray-linux-${ matrix.arch }
           path: out/qz-tray-*.run
-      - if: ${{ matrix.target-arch == 'x86_64' }}
+      - if: ${{ matrix.arch == 'x86_64' }}
         run: |
           # Only run tests on same arch
           sudo out/qz-tray-*.run
