Fix variable typos

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,10 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'liberica'
       - run: sudo apt-get install makeself
-      - run: ant -Dtarget.arch=${ matrix.arch } makeself
+      - run: ant -Dtarget.arch=${{ matrix.arch }} makeself
       - uses: actions/upload-artifact@v4
         with:
-          name: qz-tray-linux-${ matrix.arch }
+          name: qz-tray-linux-${{ matrix.arch }}
           path: out/qz-tray-*.run
       - if: ${{ matrix.arch == 'x86_64' }}
         run: |
@@ -41,10 +41,10 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'liberica'
-      - run: ant -Dtarget.arch=${ matrix.arch } pkgbuild
+      - run: ant -Dtarget.arch=${{ matrix.arch }} pkgbuild
       - uses: actions/upload-artifact@v4
         with:
-          name: qz-tray-macos-${ matrix.arch }
+          name: qz-tray-macos-${{ matrix.arch }}
           path: out/qz-tray-*.pkg
       - if: ${{ matrix.arch == 'aarch64' }}
         run: |
@@ -68,10 +68,10 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'liberica'
       - run: choco install nsis
-      - run: ant nsis
+      - run: ant -Dtarget.arch=${{ matrix.arch }} nsis
       - uses: actions/upload-artifact@v4
         with:
-          name: qz-tray-windows-${ matrix.arch }
+          name: qz-tray-windows-${{ matrix.arch }}
           path: out/qz-tray-*.exe
       - if: ${{ matrix.arch == 'x86_64' }}
         run: |
