--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
       - if: ${{ matrix.arch == 'riscv64' }}
         run: |
           # TODO: remove after migrating to JDK21+
-          echo "ANT_ARGS=-Djlink.java.version=21.0.7+9" >> $GITHUB_ENV
+          echo "ANT_ARGS=-Djlink.java.version=21.0.7+15" >> $GITHUB_ENV
       - run: ant -Dtarget.arch=${{ matrix.arch }} makeself
       - uses: actions/upload-artifact@v4
         with:
@@ -54,7 +54,7 @@ jobs:
         run: |
           # Only run tests on same arch
           sudo installer -pkg out/qz-tray-*.pkg -target /
-          "'/Applications/QZ Tray.app/Contents/MacOS/QZ Tray' --version"
+          "/Applications/QZ Tray.app/Contents/MacOS/QZ Tray" --version
           brew install nsis makeself
           ant makeself
           ant nsis
