--- a/ant/project.properties
+++ b/ant/project.properties
@@ -28,9 +28,9 @@ jar.index=true
 separate.static.libs=true
 
 # See also qz.common.Constants.java
-javac.source=11
-javac.target=11
-java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
+javac.source=25
+javac.target=25
+java.download=https://bell-sw.com/pages/downloads/#jdk-${javac.target}-lts
 
 # Java vendor to bundle into software (e.g. "*BellSoft|Adoptium|Microsoft|Amazon|IBM")
 jlink.java.vendor="BellSoft"
