Initial support for unit tests

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -17,6 +17,7 @@ launch.overrides=QZ_OPTS
 
 src.dir=${basedir}/src
 out.dir=${basedir}/out
+test.dir=${basedir}/test
 build.dir=${out.dir}/build
 dist.dir=${out.dir}/dist
 
