--- a/build.xml
+++ b/build.xml
@@ -50,20 +50,23 @@
         </path>
         <pathconvert property="pdfbox.path" refid="pdfbox.found"/>
 
+        <!-- classpath to re-use for compilation, tests, etc -->
+        <path id="main.classpath">
+            <pathelement path="${pdfbox.path}"/>
+            <pathelement location="${build.dir}/${project.filename}"/>
+
+            <fileset dir="lib">
+                <include name="**/*.jar"/>
+            </fileset>
+
+            <fileset dir="${java.home}">
+                <include name="**/*.jar"/>
+            </fileset>
+        </path>
+
         <javac destdir="${build.dir}/${project.filename}" source="${javac.source}" target="${javac.target}" includeantruntime="false" encoding="UTF-8" debug="true">
             <src path="${src.dir}"/>
-            <classpath>
-                <!-- prefer bouncycastle from pdfbox over others -->
-                <path id="plugin.override">
-                    <pathelement path="${pdfbox.path}"/>
-                </path>
-                <fileset dir="lib">
-                    <include name="**/*.jar"/>
-                </fileset>
-                <fileset dir="${java.home}">
-                    <include name="**/*.jar"/>
-                </fileset>
-            </classpath>
+            <classpath refid="main.classpath"/>
             <compilerarg value="-Xlint:-options"/>
         </javac>
 
@@ -78,24 +81,21 @@
     </target>
 
     <target name="compile-tests" depends="compile-socket">
-        <echo level="info">test.dir: ${test.dir}</echo>
+        <mkdir dir="${build.dir}/test"/>
+        <echo level="info">Test sources: ${test.dir}</echo>
+        <echo level="info">Test classes: ${build.dir}/test</echo>
 
-        <javac destdir="${build.dir}/${project.filename}" source="${javac.source}" target="${javac.target}" includeantruntime="false" encoding="UTF-8" debug="true">
+        <javac destdir="${build.dir}/test" source="${javac.source}" target="${javac.target}" includeantruntime="false" encoding="UTF-8" debug="true">
             <src path="${test.dir}"/>
-            <classpath>
-                <!-- prefer bouncycastle from pdfbox over others -->
-                <path id="plugin.override">
-                    <pathelement path="${pdfbox.path}"/>
-                </path>
-                <fileset dir="lib">
-                    <include name="**/*.jar"/>
-                </fileset>
-                <fileset dir="${java.home}">
-                    <include name="**/*.jar"/>
-                </fileset>
-            </classpath>
+            <classpath refid="main.classpath"/>
             <compilerarg value="-Xlint:-options"/>
         </javac>
+
+        <path id="tests.classpath">
+            <path refid="testng.classpath"/>
+            <path refid="main.classpath"/>
+            <pathelement location="${build.dir}/test"/>
+        </path>
     </target>
 
     <target name="build-jar" depends="download-javafx,compile-socket,copy-libs,externalize-libs">
@@ -159,6 +159,8 @@
             <fileset dir="${basedir}/lib">
                 <include name="**/*.jar"/>
                 <exclude name="**/javafx*"/>
+                <exclude name="**/testng*.jar"/>
+                <exclude name="**/jcommander*.jar"/>
             </fileset>
         </unzip>
         <!-- Copy platform specific target javafx version -->
@@ -334,26 +336,8 @@
     <target name="makeself" depends="get-target-arch,target-os-linux,distribute,provision,download-jre,build-run"/>
 
     <target name="testng" depends="compile-tests">
-        <testng classpathref="testng.classpath" haltOnFailure="true" verbose="2">
-            <classpath>
-                <pathelement location="${build.dir}/${project.filename}"/>
-                <!-- prefer bouncycastle from pdfbox over others -->
-                <path id="plugin.override">
-                    <pathelement path="${pdfbox.path}"/>
-                </path>
-                <fileset dir="lib">
-                    <include name="**/*.jar"/>
-                </fileset>
-                <fileset dir="${java.home}">
-                    <include name="**/*.jar"/>
-                </fileset>
-            </classpath>
-            <classfileset dir="out/build/qz-tray" includes="**/*Tests.class">
-                <!-- FIXME: Convert all classes to leverage @Test annotation -->
-                <exclude name="**/InstallerTests.class"/>
-                <exclude name="**/AppFinderTests.class"/>
-                <exclude name="**/ProvisionerInstallerTests.class"/>
-            </classfileset>
+        <testng listeners="qz.testng.ConciseSkipListener" classpathref="tests.classpath" haltOnFailure="true" verbose="2">
+            <classfileset dir="${build.dir}/test" includes="**"/>
         </testng>
     </target>
 </project>
