--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -30,8 +30,8 @@ commons-ssl.version=0.3.20
 
 # Dependency versions for ant only
 jsign.version=7.3
-# FIXME: Why does testng have to be 6.7?
-testng.version=6.7
+testng.version=7.11.0
+testng-ant.version=1.0.0
 
 # General configuration
 ivy.report.todir=${basedir}/reports
