Attempt to fix testing dependencies

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -20,6 +20,7 @@ dist.dir=${out.dir}/dist
 
 lib.dir=${basedir}/deps
 ivy.lib.dir=${lib.dir}/ivy
+ant.lib.dir=${basedir}/ant/deps/ivy
 sign.lib.dir=${out.dir}/jar-signed
 
 jar.compress=true
