Add metadata to .exe files on Windows.  Closes #1411 - Adds a new parameter to --version [x.x.x.x] to provide compatibility with NSIS VIProductVersion field

--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -17,6 +17,16 @@
 RequestExecutionLevel user
 
 ; Application information
+!define /date YEAR %Y
+VIProductVersion "${build.nsis.version}"
+VIAddVersionKey "FileDescription" "${project.name}"
+VIAddVersionKey "ProductName" "${project.name}"
+VIAddVersionKey "ProductVersion" "${build.version}"
+VIAddVersionKey "CompanyName" "${vendor.company}"
+VIAddVersionKey "LegalCopyright" "Copyright © ${YEAR}"
+VIAddVersionKey "LegalTrademarks" "${vendor.company}"
+VIAddVersionKey "OriginalFilename" "${project.filename}.exe"
+
 Name "${project.name}"
 Caption "${project.name}"
 Icon "${basedir}/assets/branding/windows-icon.ico"
