--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -14,7 +14,7 @@ jna.version=5.18.1
 jssc.version=2.10.2
 libusb4java.version=1.2.0
 log4j.version=2.25.2
-#mslinks.version=1.1.0
+mslinks.version=1.1.1
 pdfbox.version=2.0.35
 purejavahidapi.version=0.0.10
 servlet-api.version=4.0.6
