--- a/ant/ivy-deps.properties
+++ b/ant/ivy-deps.properties
@@ -6,7 +6,7 @@ flatlaf.version=3.6.2
 icu4j.version=77.1
 jaiimageio.version=1.4.0
 javafx.version=26-ea+12
-#javasemver.version=0.9.0
+javasemver.version=0.10.2
 #jettison.version=1.5.4
 jbig2.version=3.0.4
 jetty.version=10.0.26
