--- a/ant/unix/unix-uninstall.sh.in
+++ b/ant/unix/unix-uninstall.sh.in
@@ -4,8 +4,10 @@
 set -e
 
 if [ "$(id -u)" != "0" ]; then
-   echo "This script must be run with root (sudo) privileges" 1>&2
-   exit 1
+    if [ "$1" != "--user" ]; then
+      echo "This script should be run with root (sudo) privileges.  Call with '--user' to ignore." 1>&2
+      exit 1
+    fi
 fi
 
 # Get working directory
